Fixed scrollbar

--- a/css/main.css
+++ b/css/main.css
@@ -3,15 +3,16 @@
   padding: 0;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+  scrollbar-width: thin;
+  scrollbar-color: #2196f3 #c2d2e4;
 }
 
 *::-webkit-scrollbar {
-  width: 3px;
+  width: 8px;
 }
 
 *::-webkit-scrollbar-thumb {
   background-color: #2196f3;
-  border-radius: 4px;
 }
 
 html {
