--- a/scss/_globals.scss
+++ b/scss/_globals.scss
@@ -2,15 +2,16 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  scrollbar-width: thin;
+  scrollbar-color: $color-accent #c2d2e4;
 }
 
 *::-webkit-scrollbar {
-  width: 3px;
+  width: 8px;
 }
 
 *::-webkit-scrollbar-thumb {
   background-color: $color-accent;
-  border-radius: $border-r-4;
 }
 
 html {
